# 3ds_file_printer

./: .gitignore  CMakeLists.txt  ball.3DS  bridge.3DS  bridge1.3DS  stairs1.3DS  stairs2.3DS  stairs3.3DS  stairs4.3DS  test.3DS  test1.3DS  test2.3DS  test3.3DS  test4.3DS  test5.3DS
src/: main.cpp
src/3dsEntity/: Chunk.cpp  Chunk.h  Chunks.h
src/3dsEntity/ChunkImp/: CK_Main3DS.cpp  CK_Main3DS.h  CK_Unknown.cpp  CK_Unknown.h
src/3dsEntity/ChunkImp/Main3DS/: CK_Edit3DS.cpp  CK_Edit3DS.h
src/3dsEntity/ChunkImp/Main3DS/Edit3DS/: CK_Edit_Object.cpp  CK_Edit_Object.h
src/3dsEntity/ChunkImp/Main3DS/Edit3DS/EditObject/: CK_Obj_TriMesh.cpp  CK_Obj_TriMesh.h
src/3dsEntity/ChunkImp/Main3DS/Edit3DS/EditObject/TriMesh/: CK_Tri_Face1.cpp  CK_Tri_Face1.h  CK_Tri_Local.cpp  (+3 more)
src/MeshEntity/: Mesh.cpp  Mesh.h  Mesh_Obj.cpp  Mesh_Obj.h
src/MeshEntity/components/: BoundingBox.cpp  BoundingBox.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Vertex.cpp  Vertex.h
src/common/: Vector3D.cpp  Vector3D.h
src/window/: MainFrame.cpp  MainFrame.h  WindowInfo.h
src/window/render/: Render.cpp  Render.h  Render_DATA.h  Render_Param.h
src/window/render/functions/: Blanker.cpp  Blanker.h  Cutter.cpp  Cutter.h  Rasterize.cpp  Rasterize.h
src/window/render/functions/lightTracer/: LT_Data.cpp  LT_Data.h  LightTracer.cpp  LightTracer.h
src/window/render/functions/rasterization/: Blanker.cpp  Blanker.h  Cutter.cpp  Cutter.h  LightFilter.cpp  LightFilter.h  Rasterization_DATA.h
src/window/render/functions/rasterization/components/: Edge_Node.cpp  Edge_Node.h  Z_Buffer.cpp  Z_Buffer.h
